# py-stack

./: README.md  pyproject.toml
py_stack/: stack.py
tests/: stack_test.py
