[tool.poetry]
name = "py-stack"
version = "1.0.0"
description = ""
authors = ["ethan-mcconkey <ethanmcconkey@protonmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "py_stack", from = ""}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
coverage = "^7.4.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"

[tool.poe.tasks]
type = 'mypy ./py_stack --strict'
test = 'pytest'
test-cov = 'pytest --cov=py_stack'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
